# BMP-img-processor

./: CMakeLists.txt  README.md  arg_parser.cpp  arg_parser.h  filters.cpp  filters.h  image.cpp  image.h  image_processor.cpp  pipeline.cpp  pipeline.h
